--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,22 +3,20 @@
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="Dashboard" />
-    <item
-        android:id="@+id/navigation_notificat2ions"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="Contact" />
-    <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="Report" />
-
-
-    <item
-        android:id="@+id/navigation_dashboa33rd"
         android:icon="@drawable/ic_profile"
-        android:title="profile" />
+        android:title="@string/title_dashboard" />
+    <item
+        android:id="@+id/navigation_contact"
+        android:icon="@drawable/ic_contact"
+        android:title="@string/title_contact" />
+    <item
+        android:id="@+id/navigation_report"
+        android:icon="@drawable/ic_profile"
+        android:title="@string/title_report" />
+    <item
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/ic_settings"
+        android:title="@string/title_profile" />
 
 
 
