--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -13,11 +13,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="vidfjlvbd"
-            android:textSize="40dp"/>
+            android:layout_height="200dp">
+
+            <TextView
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="some graph content"
+                android:textSize="30dp" />
+
+
+
+
+        </LinearLayout>
+
+
+
+
 
     </LinearLayout>
 
