--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     android:background="#e6e6e6">
 <TextView
+    android:padding="10dp"
     android:layout_marginTop="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,28 +17,32 @@
     android:textAlignment="center"/>
 
     <androidx.cardview.widget.CardView
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         app:cardCornerRadius="5dp"
         android:layout_width="match_parent"
         android:layout_height="70dp">
         <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <!--Add cardview contents-->
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary">
+            <ImageView
+                android:paddingLeft="15dp"
+                android:layout_weight="0.1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@mipmap/ic_chikaballapur"
+                />
             <TextView
-
+                android:textColor="#ffffff"
+                android:layout_weight="10"
                 android:layout_gravity="center"
-                android:textSize="25dp"
+                android:textSize="35dp"
                 android:textAlignment="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/taluk_chikkaballapur"/>
-
-
-
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -46,49 +51,27 @@
         android:layout_width="match_parent"
         android:layout_height="70dp">
         <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <!--Add cardview contents-->
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary">
+            <ImageView
+                android:paddingLeft="15dp"
+                android:layout_weight="0.1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@mipmap/ic_bage"
+                />
             <TextView
-
+                android:textColor="#ffffff"
+                android:layout_weight="10"
                 android:layout_gravity="center"
-                android:textSize="25dp"
-                android:textAlignment="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/taluk_chintamani"/>
-
-
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-
-    <androidx.cardview.widget.CardView
-        android:layout_margin="10dp"
-        app:cardCornerRadius="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="70dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <!--Add cardview contents-->
-            <TextView
-
-                android:layout_gravity="center"
-                android:textSize="25dp"
+                android:textSize="35dp"
                 android:textAlignment="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/taluk_bageepalli"/>
-
-
-
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -97,77 +80,112 @@
         android:layout_width="match_parent"
         android:layout_height="70dp">
         <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <!--Add cardview contents-->
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary">
+            <ImageView
+                android:paddingLeft="15dp"
+                android:layout_weight="0.1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@mipmap/ic_sid"
+                />
             <TextView
-
+                android:textColor="#ffffff"
+                android:layout_weight="10"
                 android:layout_gravity="center"
-                android:textSize="25dp"
-                android:textAlignment="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/taluk_gauribinuru"/>
-
-
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_margin="10dp"
-        app:cardCornerRadius="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="70dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <!--Add cardview contents-->
-            <TextView
-
-                android:layout_gravity="center"
-                android:textSize="25dp"
-                android:textAlignment="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/taluk_gudibanda"/>
-
-
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-    <androidx.cardview.widget.CardView
-        android:layout_margin="10dp"
-        app:cardCornerRadius="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="70dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <!--Add cardview contents-->
-            <TextView
-
-                android:layout_gravity="center"
-                android:textSize="25dp"
+                android:textSize="35dp"
                 android:textAlignment="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/taluk_shillaghatta"/>
-
-
-
         </LinearLayout>
-
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:layout_margin="10dp"
+        app:cardCornerRadius="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="70dp">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary">
+            <ImageView
+                android:paddingLeft="15dp"
+                android:layout_weight="0.1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@mipmap/ic_gauri"
+                />
+            <TextView
+                android:textColor="#ffffff"
+                android:layout_weight="10"
+                android:layout_gravity="center"
+                android:textSize="35dp"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/taluk_gauribinuru"/>
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
 
-
-
-
-
+    <androidx.cardview.widget.CardView
+        android:layout_margin="10dp"
+        app:cardCornerRadius="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="70dp">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary">
+            <ImageView
+                android:paddingLeft="15dp"
+                android:layout_weight="0.1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@mipmap/ic_gauri"
+                />
+            <TextView
+                android:textColor="#ffffff"
+                android:layout_weight="10"
+                android:layout_gravity="center"
+                android:textSize="35dp"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/taluk_gauribinuru"/>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:layout_margin="10dp"
+        app:cardCornerRadius="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="70dp">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary">
+            <ImageView
+                android:paddingLeft="15dp"
+                android:layout_weight="0.1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@mipmap/ic_chikaballapur"
+                />
+            <TextView
+                android:textColor="#ffffff"
+                android:layout_weight="10"
+                android:layout_gravity="center"
+                android:textSize="35dp"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/taluk_chintamani"/>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
