--- a/app/src/main/res/layout/activity_bottom_navigation.xml
+++ b/app/src/main/res/layout/activity_bottom_navigation.xml
@@ -19,6 +19,7 @@
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:theme="@style/Widget.BottomNavigationView"
         app:labelVisibilityMode="labeled"
         android:id="@+id/navigation"
         android:layout_width="0dp"
@@ -29,6 +30,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
+        app:menu="@menu/navigation"
+        app:itemIconTint="@color/black"
+        app:itemTextColor="@color/black"
+        app:itemTextAppearanceActive="@color/black"
+        app:itemTextAppearanceInactive="@color/colorAccent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
