--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <!--<color name="colorPrimary">#008577</color>-->
+    <color name="colorPrimary">#ffffff</color>
+
+    <color name="colorPrimaryDark">#cacaca</color>
     <color name="colorAccent">#D81B60</color>
     ..    <color name="viewBg">#f1f5f8</color>
     <color name="album_title">#4c4c4c</color>
@@ -39,5 +41,10 @@
         <item>@color/dot_dark_screen4</item>
     </array>
 
+    <color name="black">#000000</color>
+
     <color name="transperant">#00000000</color>
+
+    <color name="deep_orange">#E64A19</color>
+    <color name="brown">#5D4037</color>
 </resources>
