--- a/app/src/main/res/layout/activity_bottom_navigation.xml
+++ b/app/src/main/res/layout/activity_bottom_navigation.xml
@@ -31,9 +31,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation"
-        app:itemIconTint="@color/black"
-        app:itemTextColor="@color/black"
-        app:itemTextAppearanceActive="@color/black"
-        app:itemTextAppearanceInactive="@color/colorAccent"/>
+        app:itemIconTint="@drawable/selector"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
