--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".NotificationsActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="lfvnipdfnbipnbp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
