--- a/app/src/main/res/layout/report_fragment.xml
+++ b/app/src/main/res/layout/report_fragment.xml
@@ -27,6 +27,7 @@
             >
 
             <LinearLayout
+                android:id="@+id/newreportbutton"
                 android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -73,56 +74,134 @@
             android:layout_height="1dp"
             android:background="#000000"/>
 
-            <androidx.cardview.widget.CardView
-            app:cardCornerRadius="10dp"
-            android:layout_margin="10dp"
+
+
+
+
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardElevation="5dp">
-                <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="100dp">
+            android:layout_margin="5dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="2dp">
 
-                    <ImageView
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/ic_notifications_black_24dp"
-                        />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/status"
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/bg_screen4"/>
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="100dp"
+                    android:src="@drawable/books"
+                    android:layout_height="match_parent" />
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
 
                     <RelativeLayout
+                        android:padding="5dp"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
                         <TextView
-                            android:id="@+id/reportedtotitle"
+                            android:id="@+id/reportidtitle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Reported to :"/>
+                            android:text="Report Id:"
+                            android:textSize="10dp"
+                            app:layout_constraintStart_toEndOf="@+id/image"
+                            />
+
                         <TextView
-                            android:layout_toRightOf="@id/reportedtotitle"
+                            android:id="@+id/reportid"
+                            android:layout_toRightOf="@id/reportidtitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:text="254896587"
+                            android:textSize="10dp"
+                            />
+                        <TextView
+                            android:id="@+id/villagenametitle"
+                            android:layout_below="@id/reportidtitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Village name:"/>
+
+                        <TextView
+                            android:id="@+id/villagename"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/reportid"
+                            android:layout_toRightOf="@id/villagenametitle"
+                            android:text="Village name:" />
+
+                        <TextView
+                            android:id="@+id/reportedtotitle"
+                            android:layout_below="@id/villagenametitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Reported to : "/>
+
+                        <TextView
+
                             android:id="@+id/reportedto"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="MR xyz"/>
+                            android:layout_below="@id/villagename"
+                            android:layout_toRightOf="@id/reportedtotitle"
+                            android:text="official name" />
                         <TextView
+                            android:id="@+id/problemtitle"
                             android:layout_below="@id/reportedtotitle"
-                            android:id="@+id/villagenametitle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="village Name:"/>
+                            android:text="Problem : "/>
+
                         <TextView
-                            android:layout_below="@id/reportedto"
-                            android:layout_toRightOf="@id/villagenametitle"
-                            android:id="@+id/reportdto"
+
+                            android:id="@+id/problem"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="MR xyz"/>
+                            android:layout_below="@id/reportedto"
+                            android:layout_toRightOf="@id/problemtitle"
+                            android:text="some problem" />
+
+                        <TextView
+                            android:id="@+id/lastupdatetitle"
+                            android:layout_below="@id/problemtitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Last update : "/>
+
+                        <TextView
+                            android:id="@+id/update"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/problem"
+                            android:layout_toRightOf="@id/lastupdatetitle"
+                            android:text="some update" />
+
 
 
                     </RelativeLayout>
                 </LinearLayout>
-            </androidx.cardview.widget.CardView>
+
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
 
 
 
