--- a/app/src/main/res/layout/activity_bottom_navigation.xml
+++ b/app/src/main/res/layout/activity_bottom_navigation.xml
@@ -20,7 +20,9 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:theme="@style/Widget.BottomNavigationView"
-        app:labelVisibilityMode="labeled"
+        app:itemIconSize="28dp"
+        app:labelVisibilityMode="unlabeled"
+        app:itemTextColor="#464646"
         android:id="@+id/navigation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
