--- a/app/src/main/res/layout/activity_grivence.xml
+++ b/app/src/main/res/layout/activity_grivence.xml
@@ -26,6 +26,7 @@
 
     <LinearLayout
 
+        android:id="@+id/selecttaluk"
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -58,6 +59,7 @@
 
 
         <LinearLayout
+            android:id="@+id/selectpanchayat"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -89,6 +91,80 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#6e6e6e"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Type of Issue"
+        android:layout_gravity="center"
+        android:textAlignment="center"/>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:src="@drawable/ic_dashboard_v"
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
+        <ImageView
+            android:src="@drawable/ic_dashboard_v"
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
+
+        <ImageView
+            android:src="@drawable/ic_dashboard_v"
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
+
+        <ImageView
+            android:src="@drawable/ic_dashboard_v"
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
+
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ic_notifications_black_24dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:gravity="center"
+                android:layout_weight="1"
+                android:id="@+id/locationdata"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="343143143434"/>
+
+            <EditText
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:hint="Enter Address (Optional)"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:hint="Description:"
+        android:fontFamily="@font/cabin_regular"/>
+
 
     <Button
         android:id="@+id/o"
@@ -96,11 +172,7 @@
         android:layout_height="wrap_content" />
 
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:hint="Description:"
-        android:fontFamily="@font/cabin_regular"/>
+
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp" />
