--- a/app/src/main/res/layout/notification_fragment.xml
+++ b/app/src/main/res/layout/notification_fragment.xml
@@ -10,14 +10,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:fontFamily="@font/cabin_bold"
-            android:padding="4dp"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_margin="10dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Notifications"
-            android:textSize="30dp"
-            android:textAlignment="center"/>
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_email"/>
+            <TextView
+                android:textColor="@color/black"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:layout_marginLeft="4dp"
+                android:fontFamily="@font/cabin_bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Notifications"
+                android:textSize="30dp"
+                android:textAlignment="center"/>
+
+
+        </LinearLayout>
+
+
+
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
