--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--<color name="colorPrimary">#008577</color>-->
-   <!-- <color name="colorPrimary">#ffffff</color>-->
-
-    <color name="colorPrimary">#1da1f2</color>
-
-  <!--  <color name="colorPrimaryDark">#cacaca</color>-->
-     <color name="colorPrimaryDark">#0073bf</color>
+  <!-- <color name="colorPrimary">#ffffff</color>-->
+     <color name="colorPrimary">#1da1f2</color>
+    <color name="colorPrimaryDark">#1da1f2</color>
+    <!--  <color name="colorPrimaryDark">#cacaca</color>-->
+    <!-- <color name="colorPrimaryDark">#0073bf</color>-->
     <color name="colorAccent">#6cd2ff</color>
     ..    <color name="viewBg">#f1f5f8</color>
     <color name="album_title">#4c4c4c</color>
@@ -17,40 +16,32 @@
     <color name="bg_screen2">#20d2bb</color>
     <color name="bg_screen3">#3395ff</color>
     <color name="bg_screen4">#c873f4</color>
-
     <!-- dots inactive colors -->
     <color name="dot_dark_screen1">#d1395c</color>
     <color name="dot_dark_screen2">#14a895</color>
     <color name="dot_dark_screen3">#2278d4</color>
     <color name="dot_dark_screen4">#a854d4</color>
-
     <!-- dots active colors -->
     <color name="dot_light_screen1">#f98da5</color>
     <color name="dot_light_screen2">#8cf9eb</color>
     <color name="dot_light_screen3">#93c6fd</color>
     <color name="dot_light_screen4">#e4b5fc</color>
-
     <array name="array_dot_active">
         <item>@color/dot_light_screen1</item>
         <item>@color/dot_light_screen2</item>
         <item>@color/dot_light_screen3</item>
         <item>@color/dot_light_screen4</item>
     </array>
-
     <array name="array_dot_inactive">
         <item>@color/dot_dark_screen1</item>
         <item>@color/dot_dark_screen2</item>
         <item>@color/dot_dark_screen3</item>
         <item>@color/dot_dark_screen4</item>
     </array>
-
     <color name="black">#000000</color>
-
     <color name="transperant">#00000000</color>
-
     <color name="deep_orange">#E64A19</color>
     <color name="brown">#5D4037</color>
-
     <color name="colorSecondary">#00897b</color>
     <color name="colorSecondaryLight">#4ebaaa</color>
     <color name="colorSecondaryDark">#005b4f</color>
