Grivence activity new +++

--- a/app/src/main/res/layout/activity_grivence.xml
+++ b/app/src/main/res/layout/activity_grivence.xml
@@ -165,11 +165,13 @@
         android:fontFamily="@font/cabin_regular"/>
 
     <ImageView
+        android:id="@+id/imageselected"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@color/black"/>
 
     <Button
+
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -183,16 +185,6 @@
         android:id="@+id/o"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
-
-
-
-
-
-
-
-
-
     </LinearLayout>
 
 </LinearLayout>
